--- a/master_thesis/sections/introduction.tex
+++ b/master_thesis/sections/introduction.tex
@@ -8,10 +8,10 @@ the \emph{Sparse Matrix-Vector Product} and simplifying \emph{SAT} formulas
 \cite{karypis1999multilevel, mann2014formula, papa2007hypergraph}. The goal 
 in \emph{VLSI} design is to partition a circuit into smaller units such that
 the wires between the gates are as short as possible \cite{bulucc2016recent}.
-Since a wire can connect more than two gates a hypergraph models a circuit more
+A wire can connect more than two gates, therefore a hypergraph models a circuit more
 accurate than a graph. In \emph{SAT} solving hypergraph partitioning is used to
 decompose a formula into smaller subformulas, which can be solved easier \cite{mann2014formula}.
-Beneath the classical application areas hypergraph partitioning can also be found
+Beneath the traditional application areas hypergraph partitioning can also be found
 in more vivid areas like \emph{Warehouse Planning}. A warehouse consists of several
 storage spaces where products can be placed. If a list of previous orders is available, 
 we can interpret the products as vertices and the orders as hyperedges. If we
@@ -23,7 +23,7 @@ it is even NP-hard to find a good approximation \cite{bui1992finding}.
 The most common heuristic used in state-of-the-art hypergraph partitioner is the
 \emph{multilevel paradigm} \cite{catalyurek1999hypergraph, heuer2017improving, karypis1999multilevel}.
 First, a sequence of smaller hypergraphs is calculated by contracting a set of hypernode pairs
-in each step (\emph{coarsening phase}). If the hypergraph is small enough we can use expensive
+in each step (\emph{coarsening phase}). If the hypergraph is small enough, we can use expensive
 heuristics to \emph{initial partition} the hypergraph into $k$ blocks. Afterwards, the sequence
 of smaller hypergraphs is \emph{uncontracted} in reverse order and, at each level, a 
 \emph{local search} heuristic is used to improve the quality of a partition 
@@ -35,7 +35,7 @@ heuristics maintains gain values (according to the objective function) of moving
 from its current block to another block \cite{fiduccia1988linear}. A move is performed, 
 if its gain value is maximum among all possible moves. The algorithm can be implemented 
 in linear time. The main disadvantage of the algorithm is its limited ability to lookahead
-\cite{zhao2002effective}. E.g. it might be more beneficial to move a hypernode with 
+\cite{zhao2002effective}. E.g., it might be more beneficial to move a hypernode with 
 a small gain because it will induce many good moves later. Therefore, the algorithm
 tends to find locally optimal solutions. \\ 
 Sanders and Schulz \cite{sanders2011engineering} successfully integrated a \emph{flow}-based refinement
@@ -44,21 +44,21 @@ calculation yields to a minimum $(s,t)$-cutset on graphs \cite{ford1956maximal}.
 approach was to extract a subgraph around the cut and configure the source and sink sets
 of the flow problem such that a maximum flow calculation on the subgraph leads to a 
 smaller cut on the original graph. In combination with the \emph{FM} heuristic, their \emph{local
-search} algorithm has the ability to find out of local optimal solutions and produces
+search} algorithm can find out of locally optimal solutions and produces
 the best partitions for a wide range of graph partitioning benchmarks.
 
 \subsection{Problem Statement}
 
 Currently, there are no competitive alternatives to the \emph{FM} heuristic as \emph{local search}
 algorithm for a multilevel hypergraph partitioner. Sanders and Schulz \cite{sanders2011engineering}
-showed that \emph{flow}-based approaches can be used in a multilevel graph partitioner to obtain
+showed that \emph{flow}-based approaches could be used in a multilevel graph partitioner to obtain
 high-quality partitions. Their algorithm is a generic framework, which basic ideas can be
 applied one-to-one on hypergraphs. However, several key challenges remain.\\
 First, we have to find an appropriate model of a hypergraph as flow network. Each maximum
 $(s,t)$-flow on this model should induce a minimum $(s,t)$-cutset on the hypergraph.
-Afterwards, the model should be used in order to improve the cut of a given bipartition by
+Afterwards, the model should be used to improve the cut of a given bipartition by
 executing a flow problem on a subset of the hypernodes. Therefore, the 
-sources and sinks must be configured in order to satisfy the above-formulated constraint. \\
+sources and sinks must be configured to satisfy the above-formulated constraint. \\
 The framework should be integrated into the $n$-level hypergraph partitioner 
 \emph{KaHyPar}. \emph{KaHyPar} is a multilevel hypergraph partitioner in its most extreme 
 version by only contracting two vertices in one level of the multilevel hierarchy
@@ -79,7 +79,7 @@ precisely, applying the approach of Sanders and Schulz \cite{sanders2011engineer
 directly on hypergraphs results in a minimum $(S,T)$-cutset greater or equal as with
 our new technique. We integrate the framework of \cite{sanders2011engineering} into 
 \emph{KaHyPar} and show that \emph{flow}-based refinement in combination with the
-\emph{FM} algorithm produces on a large majority of a wide range of real-world
+\emph{FM} algorithm produces on a majority of a wide range of real-world
 benchmarks the best-known partitions in comparison to other state-of-the-art hypergraph
 partitioners. In numbers, compared to $5$ different systems we achieve on $70\%$ 
 of $3222$ benchmark instances the best-known partitions. In comparison to the 
@@ -88,7 +88,7 @@ partitions and is only slower by a factor of $2$.
 
 \subsection{Outline}
 
-We first introduce important notations and summarize related work in Section \ref{sec:preliminaries}
+We first introduce necessary notations and summarize related work in Section \ref{sec:preliminaries}
 and \ref{sec:related_work}. Afterwards, we describe sparsifying techniques of the flow network
 proposed by Lawler \cite{lawler1973} in Section \ref{sec:opt_flow_network}. In Section
 \ref{sec:flow_refinement} we present our optimized source and sink set modeling
