--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -78,20 +78,19 @@ $T' = T\setminus V'\ \cup \bigcup\limits_{t' \in I(V' \cap T)} \{t'\}$ and $S' \
 Let $G'$ be the graph obtained by removing all $v \in V' \cap (S \cup T)$. If
 the minimum-capacity $(S,T)$-cutset in $G$ is smaller than $\infty$, then no outgoing
 edge of a node $s \in S$ and no incomming edge of a node $t \in T$ can be cut, because for all
-those edges $e$ the capacity $c(e) = \infty$. If $S' \cap T' = \emptyset$ every
-minimum-capacity $(S,T)$-cutset in $G$ is equal with a minimum-capacity $(S',T')$-cutset
-in $G'$. 
+those edges $e$ the capacity $c(e) = \infty$. Therefore, if $S' \cap T' = \emptyset$ each
+minimum-capacity $(S,T)$-cutset in $G$ must be equal with a minimum-capacity $(S',T')$-cutset
+in $G'$. \\
 Each $(S,T)$-cutset in $G$ is also a $(S',T')$-cutset in $G'$ and vice versa.
 If the minimum-capacity $(S,T)$-cutset in $G$ is $\infty$, every cutset separating
 $(S,T)$ resp. $(S',T')$ is a minimum $(S,T)$- resp. $(S',T')$-cutset.
 \end{proof}
 
-In conclusion, if we want to determine a minimum-capacity $(S,T)$-cutset
-in \ShortT{L} (with $S,T \subseteq V$), we can e.g. remove any $s \in S$ resp. $t \in T$ 
-(and even from \ShortT{L}) and instead add all incident 
-hyperedges $e' \in I(S)$ resp. $e'' \in I(T)$ as sources resp. sinks. The resulting 
-minimum-capacity $(S',T')$-cutset in \ShortT{L} is equal with a minimum-capacity $(S,T)$-cutset
-in \ShortT{L}. 
+As a consequence of this lemma, we could replace (or even remove) 
+e.g. a source hypernode $v \in S$ of \ShortT{L} and instead add all
+incomming hyperedge nodes $e' \in I(v)$ as source nodes to the flow 
+problem. Because for all incomming resp. outgoing edges of vertices $v$ of 
+\ShortT{L} the capacity is $\infty$.
 
 \begin{theorem}
 \label{theorem:st_cutset_equal}
@@ -104,7 +103,7 @@ $T' = T \setminus V'\ \cup \bigcup\limits_{e \in I(V'\cap T)} \{e''\}$.
 
 \begin{proof}
 
-Consider again the bipartite graph representation $G_* = (V_*,E_*,c_*)$ 
+Consider the bipartite graph representation $G_* = (V_*,E_*,c_*)$ 
 of a hypergraph $H = (V,E,c,\omega)$ presented in Section \ref{sec:hypergraph} and \ref{sec:related_lawler}, 
 where for all $v \in V: c_*(v) = \infty$ and for all $e \in E: c_*(e) = 
 \omega(e)$. A minimum-weight $(S,T)$-vertex separator in $G_*$ is equal
@@ -114,44 +113,46 @@ all $v \in V'\setminus (S \cup T)$ of $G_*$ and adding a clique between all $e \
 A minimum-weight $(S,T)$-vertex separator in $G_H$ can be calculated by finding a 
 minimum-capacity $(S,T)$-cutset in our new network \ShortExT{H}{V'\setminus (S \cup T)}.
 We will show that each vertex separator in $G_*$ is also a vertex separator in $G_H$ and
-vice versa. Finally, with Lemma \ref{lemma:lemma1} follows our assumption. We will 
-denote a vertex separator of a graph $G$ with $\V{G}$ and define $V'' := V' \setminus (S \cup T)$. 
+vice versa. With Lemma \ref{lemma:lemma1} we can show that each minimum $(S,T)$-cutset
+of \ShortExT{H}{V'\setminus (S \cup T)} is equal with a minimum $(S',T')$-cutset of
+\ShortExT{H}{V'} and conclude the proof. We will denote a vertex separator of a graph $G$ with 
+$\V{G}$ and define $V'' := V' \setminus (S \cup T)$. 
 We will show, that $\V{G_*} = \V{G_H}$ with the restriction $\V{G_*} \subseteq E$ and
 $\V{G_H} \subseteq E$.
 
-Assume that $\V{G_*} \subseteq E$ is not a vertex separator in $G_H$. After removing all $e \in \V{G_*}$ in
+Assume that $\V{G_*} \subseteq E$ is not a vertex separator in $G_H$. After removing all $e \in \V{G_*}$ of
 $G_H$, there exists still a path $P_H = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ in $G_H$. We can extend $P_H$ to a path $P_*$ in $G_*$.
+$v_k \in T$ of $G_H$. We can extend $P_H$ to a path $P_*$ in $G_*$.
 We define $P_* := P_H$ and replaces every occurence of a sequence $v_i = e_1 \in E$ and
 $v_{i+1} = e_2 \in E$ with a triple $(e_1,v,e_2)$ in $P_*$, where $v \in e_1 \cap e_2 \cap V''$
-(not empty per construction). $P_*$ not contain any vertex of $\V{G_*}$, because
-we have removed all hyperedge nodes $e \in \V{G_*}$ from $G_H$ before construction of $P_*$ 
+(not empty per construction). $P_*$ does not contain a vertex of $\V{G_*}$, because
+we removed all hyperedge nodes $e \in \V{G_*}$ from $G_H$ before construction of $P_*$ 
 and a hypernode is not part of  the vertex separator $\V{G_*} \subseteq E$ per defintion. 
 $P_*$ connects $S$ and $T$ in $G_*$, which is a contradiction that $\V{G_*}$ 
 is a vertex separator in $G_*$.
 
-Assume that $\V{G_H} \subseteq E$ is not a vertex separator in $G_*$. After removing all $e \in \V{G_H}$ in
+Assume that $\V{G_H} \subseteq E$ is not a vertex separator in $G_*$. After removing all $e \in \V{G_H}$ of
 $G_*$, there exists still a path $P_* = \{v_1, \ldots, v_k\}$ with $v_1 \in S$ and
-$v_k \in T$ in $G_*$. We can extend $P_*$ to a path $P_H$ in $G_H$.
+$v_k \in T$ of $G_*$. We can extend $P_*$ to a path $P_H$ in $G_H$.
 We define $P_H := P_*$ and remove all $v \in P_* \cap V''$ from $P_H$. $G_*$ is a bipartite
-graph per definition. Therefore, every path $P_*$ in $G_*$ is an alternating path of hypernodes and
+graph per definition. Therefore, each path $P_*$ in $G_*$ is an alternating path of hypernodes and
 hyperedges. The predecessor and successor of a hypernode $v \in P_* \cap V''$ must be hyperedges
 $e_1$ and $e_2$. If $v \in V''$, then $v$ is not contained $G_H$. Instead, there is
-a clique between all $e \in I(V) \Rightarrow$ $(e_1,e_2)$ is contained in $G_H$.
-$P_H$ not contain any vertex of $\V{G_H}$, because we have removed all hyperedge nodes $e \in \V{G_H}$ 
+a clique between all $e \in I(v) \Rightarrow$ $(e_1,e_2)$ is contained in $G_H$.
+$P_H$ not contain any vertex of $\V{G_H}$, because we removed all hyperedge nodes $e \in \V{G_H}$ 
 from $G_*$. $P_H$ connects $S$ and $T$ in $G_H$, which is a contradiction that 
 $\V{G_H}$ is a vertex separator in $G_H$.
 
-A minimum-weight $(S,T)$-vertex separator in $G_*$ and $G_H$ only contains hyperedges, because
-the weight of all hypernodes in $G_*$ and $G_H$ is $\infty$. Therefore, each minimum
+A minimum-weight $(S,T)$-vertex separator in $G_*$ and $G_H$ contains only hyperedges, because
+the weight of all hypernodes in $G_*$ and $G_H$ is $\infty$. Therefore, each minimum-weight
 $(S,T)$-vertex separator in $G_*$ is also a minimum-weight $(S,T)$-vertex separator in $G_H$,
 because $c(\V{G_*}) = c(\V{G_H})$. With Lemma \ref{lemma:lemma1} follows that
-a minimum-weight $(S,T)$-vertex separator in $G_*$ resp. $G_H$  can be determined by 
-calculating a minimum-capacity $(S',T')$-cutset in \ShortT{L} resp. \ShortExT{H}{V'}. 
+a minimum-weight $(S,T)$-vertex separator in $G_*$ resp. $G_H$  can also be 
+calculated by finding a minimum-capacity $(S',T')$-cutset in \ShortT{L} resp. \ShortExT{H}{V'}. 
 Therefore, there exists a equivalence between a minimum-weight $(S,T)$-cutset 
 $E_{min}$ of $H$ and the following statements: 
 
-$E_{min}$ is a minimum-$\ldots$
+$E_{min}$ is a minimum$\ldots$
 \begin{enumerate}
 \item $\ldots$-weight $(S,T)$-cutset in $H$
 \item $\ldots$-weight $(S,T)$-vertex separator in $G_*$
@@ -164,25 +165,26 @@ $E_{min}$ is a minimum-$\ldots$
 
 \end{proof}
 
-As a consequence of this Theorem a minimum-weight $(S,T)$-cutset of $H$ can be calculated with
-\ShortExT{H}{V'} the same way as with \ShortT{L} (see Section \ref{sec:related_lawler}). A open
-problem is how to obtain the corresponding bipartition. In \ShortT{L} all hypernodes
-reachable from nodes in $S$ are part of the first and all not reachable are part of the
-second block of the bipartition. Since we delete all nodes $v \in V'$ from \ShortT{L} 
-in \ShortExT{H}{V'} this relationship is no longer valid. 
+As a consequence of this Theorem a minimum-weight $(S,T)$-cutset of $H$ can 
+also be calculated with \ShortExT{H}{V'}. A open problem is how to obtain the 
+corresponding minimum-weight $(S,T)$-bipartition. In \ShortT{L} all hypernodes
+reachable from source nodes in the residual graph are part of the first and 
+all not reachable are part of the second block of the bipartition. Since we removed 
+all hypernodes $v \in V'$ in our new network, we have to reconstruct the bipartition
+with the following lemma.
 
 \begin{lemma}
 \label{lemma:bipartition_construction}
-Let $f$ be a maximum $(S,T)$-flow and $A$ be the set of all nodes reachable
-from a node $s \in S$ in the residual graph of \ShortT{L}.
+Let $f$ be a maximum $(S,T)$-flow  of \ShortT{L} and $A$ be the set of all nodes reachable
+from a node $s \in S$ in the residual graph.
 \[ \text{If } v \in A \Leftrightarrow \exists e \in I(v): e'' \in A \]
 \end{lemma}
 
 \begin{proof}
 If $e'' \in A$, then $v \in A$, because $c_L(e'',v) = \infty$ and $r_f(e'',v) = \infty$.
 Assume, if $v \in A$, then $\forall e \in I(v): e'' \notin A \Rightarrow f(e'',v) = 0$ (Note, $c(e'',v) = \infty$). 
-Otherwise $r_f(v, e'')$ would be greater than zero and this would imply that $e'' \in A$. Each path 
-$P$ in the \emph{residual graph} of \ShortT{L} from $s \in S$ to $v$ must be of the 
+Otherwise $r_f(v, e'')$ would be greater than zero and this would imply that $e'' \in A$,
+because $v \in A$. Each path $P$ in the \emph{residual graph} of \ShortT{L} from $s \in S$ to $v$ must be of the 
 form $P = (\ldots,e',v)$. For at least one $e \in I(v)$ there must be a positive flow $f(v,e') > 0$,
 otherwise edge $(e',v)$ would be not contained in the \emph{residual graph} of \ShortT{L} (Note, $c_L(e',v) = 0$).
 There is a positive flow leaving node $v$, but there is no flow entering node $v$, because
@@ -191,11 +193,11 @@ constraint for node $v$ and therefore $f$ is not a valid flow function. There mu
 with $f(e'',v) > 0 \Rightarrow r_f(v,e'') > 0 \Rightarrow e'' \in A$.
 \end{proof}
 
-Lemma \ref{lemma:bipartition_construction} gives us an alternative construction method for the minimum-weight $(S,T)$-bipartition
-of $H$ with both networks \ShortT{L} and \ShortExT{H}{V'}. Regardless of the flow network, we can 
+Lemma \ref{lemma:bipartition_construction} gives us an alternative construction for the minimum-weight $(S,T)$-bipartition
+of $H$ for both networks \ShortT{L} and \ShortExT{H}{V'}. Regardless of the flow network, we can 
 calculate a maximum flow on it and define the set $E''$, which contains all \emph{outgoing hyperedge
 nodes} $e''$ \emph{reachable} from a source node $s \in S$ in the \emph{residual graph} of the flow network. 
-Further, we define $A = \bigcup_{e \in E''} e$, then $(A,V\setminus A)$ is a 
+Further, $(A := \bigcup_{e \in E''} e,\ V\setminus A)$ is a 
 minimum-weight $(S,T)$-bipartition of $H$.
 
 
@@ -217,7 +219,7 @@ with degree smaller or equal $n$. Then our suggested flow network is \ShortExT{H
 \subsection{Removing Hyperedges via Undirected Flow-Edges}
 \label{sec:edge_size_network}
 
-If we want to find a minimum-weight $(S,T)$-cutset in a graph $G = (V,E,\omega)$, we do not need to transform
+If we want to find a minimum-weight $(S,T)$-cutset in a graph $G = (V,E,\omega)$, we do not have to transform
 $G$ into a equivalent flow network. We can directly operate on the graph with capacities
 $c(e) = \omega(e)$ for all $e \in E$ \cite{ford1956maximal}. Hypergraphs are generalizations of graph, where
 an edge can consist of more than two nodes. However, a hyperedge $e$ of size $2$ can still be 
@@ -262,6 +264,15 @@ flow network \T{G}.
 
 \begin{proof}
 
+%Each path $P_L$ of \ShortT{L} from $s \in S$ to $t \in T$ can be mapped 
+%bijective to a path $P_G$ of \ShortT{G} by replacing each occurence of $(\ldots,v_1,e',e'',v_2,\ldots)$ 
+%with $|e| = 2$ and $v_1,v_2 \in e$ in $P_L$ with $(\ldots,v_1,v_2,\ldots)$ in $P_G$.
+%Therefore, there exists a one-to-one correspondence between all paths from $S$
+%to $T$ of \ShortT{L} and \ShortT{G}. Since $c_L(e',e'') = c_G(v_1,v_2)$, each augmenting path of \ShortT{L}
+%can be mapped to a unique augmenting path of \ShortT{G} and vice versa. Executing an
+%augmenting path maximum flow algorithm on \ShortT{L} and simultanousely mapping each augmenting path
+%to \ShortT{G} yields to a maximum $(S,T)$-flow $f$ on both networks. 
+
 We define the bijective function $\Phi: E_L \rightarrow E_G$ as follows
 \[ \Phi(e',e'') = 
    \begin{cases}
@@ -269,34 +280,34 @@ We define the bijective function $\Phi: E_L \rightarrow E_G$ as follows
       \{v_1,v_2\}, \text{otherwise (with $v_1,v_2 \in e$ and $v_1 \neq v_2$)}
    \end{cases} \]
 
-We will show that each $(S,T)$-cutset $A_L$ in \ShortT{L} is a $(S,T)$-cutset $\Phi(A_L)$ in
+We will show that each $(S,T)$-cutset $A_L$ of \ShortT{L} is a $(S,T)$-cutset $\Phi(A_L)$ of
 \ShortT{G} and vice versa. Per defintion $c_L(A_L) = c_G(\Phi(A_L))$ and for each $(S,T)$-cutset
-$A_G$ in \ShortT{G} $c_G(A_G) = c_L(\Phi^{-1}(A_G))$. Therefore, each minimum-capacity $(S,T)$-cutset
-in \ShortT{L} must be a minimum-capacity $(S,T)$-cutset in \ShortT{G} and vice versa. In the following 
+$A_G$ of \ShortT{G} $c_G(A_G) = c_L(\Phi^{-1}(A_G))$. Therefore, each minimum-capacity $(S,T)$-cutset
+of \ShortT{L} must be a minimum-capacity $(S,T)$-cutset of \ShortT{G} and vice versa. In the following 
 let $E^* = \bigcup_{e \in E} \{(e',e'')\}$. \\
 Let $A_L \subseteq E^*$ be a $(S,T)$-cutset of \ShortT{L}. Assume $\Phi(A_L)$ is not a $(S,T)$-cutset
-of \ShortT{G} after removing all edges $e \in \Phi(A_L)$ of \ShortT{G}. Then there exists a path
+of \ShortT{G}. Then there exists a path
 $P_G = \{v_1,\ldots,v_k\}$ connecting $S$ and $T$ in \ShortT{G} not containing any edge $e \in \Phi(A_L)$.
 Let $P_L$ be the path in \ShortT{L} obtained by adding edge $\Phi^{-1}(v_i,v_{i+1}) = (e',e'')$ between all
-$v_i = v_1 \in V$ and $v_{i+1} = v_2 \in V$ into $P_G$. $\Phi^{-1}(v_i,v_{i+1}) \notin A_L$, otherwise
-we would had removed edge $\Phi(e',e'') = (v_i,v_{i+1})$ from \ShortT{G}. $P_L$ connects $S$ and
+$v_i \in V$ and $v_{i+1} \in V$ in $P_G$. $\Phi^{-1}(v_i,v_{i+1}) \notin A_L$, because
+$P_G$ does not contain any edge of $\Phi(A_L)$. $P_L$ connects $S$ and
 $T$ in \ShortT{L}, which is a contradiction to the assumption that $A_L$ is a $(S,T)$-cutset. \\
 Let $A_G \subseteq \Phi(E^*)$ be a $(S,T)$-cutset in \ShortT{G}. Let's assume $\Phi^{-1}(A_G)$ is not
-a $(S,T)$-cutset in \ShortT{L} after removing all edges $e \in \Phi^{-1}(A_G)$ of \ShortT{L}. Then
-there exists a path $P_L = \{v_1,\ldots,v_k\}$ connecting $S$ and $T$ in \ShortT{L} not containing any
+a $(S,T)$-cutset of \ShortT{L}. Then there exists a path $P_L = \{v_1,\ldots,v_k\}$ 
+connecting $S$ and $T$ in \ShortT{L} not containing any
 edge $e \in \Phi^{-1}(A_G)$. Let $P_G$ be the path in \ShortT{G} obtained by removing each edge
 $(v_i,v_{i+1})$ with $v_i = e'$ and $v_{i+1} = e''$ and $|e| = 2$ from $P_L$. Based on the construction
 of \ShortT{L} the predecessor of $v_i$ and successor of $v_{i+1}$ must be hypernodes $v_1,v_2 \in e$.
-Therefore, $P_G$ is a valid path in \ShortT{G} connecting $S$ and $T$ not containing any edge of 
+Therefore, $P_G$ is a valid path in \ShortT{G} connecting $S$ and $T$ and not contain any edge of 
 $A_G$. This is a contradiction to the assumption that $A_G$ is a $(S,T)$-cutset.
-\end{proof}
+\end{proof} 
 
-A minimum-weight $(S,T)$-cutset of $H$ can be calculated in \ShortT{G} the same way as in
-\ShortT{L}. Each edge $(v_1,v_2)$ with $v_1,v_2 \in V$ in the minimum-capacity
+A minimum-weight $(S,T)$-cutset of $H$ could also be calculated with \ShortT{G}. 
+Each edge $(v_1,v_2)$ with $v_1,v_2 \in V$ of the minimum-capacity
 $(S,T)$-cutset of \ShortT{G} can be mapped to their corresponding hyperedge
 with $\Phi^{-1}(v_1,v_2)$. Since their exists a one-one correspondence between the hypernodes
 of \ShortT{L} and \ShortT{G} the corresponding bipartion are all hypernodes \emph{reachable}
-from a node in $S$ and all not \emph{reachable} from $S$ in the \emph{residual graph}
+from a all nodes in $S$ and all not \emph{reachable} from $S$ in the \emph{residual graph}
 of \ShortT{G}. 
 
 \subsection{Combining Techniques in a Hybrid Flow Network}
